# IGVC25

./: .clang-format  .clangd  .gitignore  99-usb-sensors.rules  LICENSE  README.md  TODO.md  a.urdf  deps.sh  frames_2025-04-24_14.40.42.gv  frames_2025-04-24_22.58.38.gv  frames_2025-04-27_20.53.09.gv  frames_2025-04-27_20.59.09.gv  pyproject.toml  settings.cfg  setup.sh  todo.md
.devcontainer/: Dockerfile  devcontainer.json  p10k.zsh  zshrc
files/activity tracking/: e-spinner.md
files/docs/: breakdown.md
files/sources/: cites.bib
igvc_ws/.devcontainer/: Dockerfile  devcontainer.json
igvc_ws/src/sir_msgs/: package.xml
scripts/: preproccess_bt.zsh
src/igvc/: CMakeLists.txt  package.xml
src/igvc/behavior/: bt_clean.xml  bt_nodes.xml
src/igvc/config/: ackermann.yaml  gz_ros2_control.yaml  joystick.yaml  localization.yaml  navigation.yaml  phidgets_imu_back.yaml  phidgets_imu_front.yaml  ros2_control.yaml  ros_gz_bridge.yaml  twist_mux.yaml  vision.yaml
src/igvc/description/: ackermann.urdf  ackermann_ac.urdf  ackermann_gz.urdf  ackermann_linkage.urdf  test_pos.urdf
src/igvc/description/macros/: components.xacro  materials.xacro
src/igvc/igvc_vision/: __init__.py  lane_detector.py  lane_following.py
src/igvc/include/igvc_common/: config.hpp  types.hpp
src/igvc/launch/: TEMPLATE.launch.py  ctrl.launch.py  lane_follow_sim.launch.py  manual-ctrl.launch.py  nav.launch.py  pos.launch.py  rsp.launch.py  sim.launch.py  teleop.launch.py  vision.launch.py
src/igvc/msg/: AckState.msg  Angle.msg  DiffState.msg  IMUFeedback.msg  Map.msg  PVA.msg  Path.msg
src/igvc/rviz/: igvc_sim.rviz
src/igvc/worlds/: course.sdf  plane.sdf
src/igvc23/: CMakeLists.txt  package.xml
src/igvc25/: CMakeLists.txt  package.xml
src/igvc25/behavior/: bt_clean.xml
src/igvc25/config/: ackermann.yaml  ackermann_linkage.yaml  ackermann_linkage_1.yaml  ackermann_linkage_2.yaml  bt_clean.xml  controllers.yaml  gz_bridge.yaml  gz_ros2_control.yaml  joy_params.yaml  localization.yaml  mapper_params_online_async.yaml  nav_through_pose_bt.xml  nav_to_pose_bt.xml  navigation.yaml  navigation_params.yaml  old_nav2_params.yaml  sarah_bt.xml  sim.rviz  sim_nav2_params.yaml  twist_mux.yaml
src/igvc25/config/root/: SP_10_4-25.json  S_5_60.json  straight.json
src/igvc25/description/: 0_robot.urdf  0_robot.urdf.xacro  ackermann.urdf  ackermann_linkage.urdf  fwd.robot.xacro  gz_control.xacro  imu_test.urdf  root.urdf  test.robot.xacro
src/igvc25/description/fwd_c-robot/: 0_core.xacro
src/igvc25/description/macros/: components.xacro  componet_macros.xacro  vlp16.xacro
src/igvc25/igvc25_py/: ack_calc.py  odom_to_tf.py  root_controller.py
src/igvc25/include/: joy.launch.py
src/igvc25/include/igvc25/: dummy_filter.hpp
src/igvc25/launch/: TEMPLATE.launch.py  ack.launch.py  localization.launch.py  nav.launch.py  navigation.launch.py  pos.test.py  rsp.launch.py  sim.launch.py  teleop.launch.py  vision.launch.py
src/igvc25/msg/: RootInstruction.msg
src/igvc25/src/: cmd_interpreter.cpp  fusion_node.cpp  ground_truth_generator.cpp  transform.cpp
src/igvc25/worlds/: empty.world  ionic.sdf  maze.sdf
src/igvc25_scripts/: README.md  package.xml  setup.cfg  setup.py
src/igvc25_scripts/src/igvc25_scripts/: republish_scan.py
src/igvc_control/: CMakeLists.txt  ackermann_angle_controller.xml  ackermann_angle_drive_controller.xml  ackermann_arduino_hardware.xml  package.xml  pure_pursuit_controller.xml
src/igvc_control/config/: ackermann_linkage_1.yaml  ackermann_linkage_2.yaml  ackermann_linkage_3.yaml  ros2_control.yaml
src/igvc_control/igvc_control_py/: ack_calc.py  ackerman_controller.py  ackermann_controller.py
src/igvc_control/launch/: ack.launch.py
src/igvc_control/src/: ackermann_angle_controller.cpp  ackermann_arduino_hardware.cpp  ackermann_firmware.ino  cmd_interpreter.cpp  pure_pursuit.cpp  steering_test.ino  transform.cpp
src/igvc_control/src/ackermann_firmware/: ackermann_firmware.ino
src/igvc_control/src/ackermann_firmwarev2/: ackermann_firmwarev2.ino
src/igvc_control/src/serial_test/: serial_test.ino
src/igvc_dashboard/: package.xml  setup.cfg  setup.py
src/igvc_drivers/: CMakeLists.txt  package.xml
src/igvc_hall_odom/: package.xml  setup.cfg  setup.py
src/igvc_localization/: CMakeLists.txt  package.xml
src/igvc_localization/include/igvc_localization/: dummy_filter.hpp  filter_base.hpp
src/igvc_localization/launch/: vision.launch.py
src/igvc_localization/src/: fusion_node.cpp  ground_truth_generator.cpp
src/igvc_navigation/: CMakeLists.txt  package.xml
src/igvc_odom/: package.xml  setup.cfg  setup.py
src/igvc_position/: CMakeLists.txt  package.xml
src/igvc_position/config/root/: FB_10_2-30.json  IR_10_2-15.json  S_10_60.json  ZZ_10_6-10.json
src/igvc_position/igvc_position_py/: odom_to_tf.py  root_controller.py
src/igvc_position/include/igvc_position/: instructions.hpp
src/igvc_position/launch/: pos.test.py
src/igvc_position/src/: fusion_node.cpp  ground_truth_generator.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/sir/: CMakeLists.txt  package.xml
src/sir/include/sir_common/: config.hpp  types.hpp
src/sir/msg/: Map.msg  PVA.msg  Path.msg  Position.msg
src/sir_common/: CMakeLists.txt  package.xml
src/sir_common/include/sir_common/: types.hpp
src/sir_dashboard/: package.xml  setup.cfg  setup.py
src/sir_drivers/: CMakeLists.txt  package.xml
src/sir_drivers/src/: gps_driver.py  imu_driver.py
src/sir_localization/: CMakeLists.txt  package.xml
src/sir_localization/include/sir_localization/: dummy_filter.hpp  filter_base.hpp  filter_engine.hpp
src/sir_localization/src/: fusion_node.cpp
src/sir_msgs/: CMakeLists.txt  package.xml
src/sir_navigation/: CMakeLists.txt  package.xml
src/sir_navigation/include/sir_navigation/: PatherBase.hpp  astar_pather.hpp  dummy_pather.hpp  obstacle_grid.hpp  occupancy_map.hpp  pather_base.hpp
src/sir_navigation/src/: map_tester.cpp  pathing_node.cpp
tests/: test_projection.py  test_projection_extra.py
tools/: listen_lane_points.py  sim_publish_camera.py
(+57 files in other folders)
