<?xml version="1.0"?>
<package format="3">
  <name>igvc25_scripts</name>
  <version>0.0.1</version>
  <description>Additional Nodes for ONU IGVC25 Capstone</description>

  <maintainer email="e-spinner@onu.edu">Elijah Spinner</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend> <!-- add more dependencies as needed -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
