<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>igvc_control</name>
  <version>0.0.1</version>
  <description>IGVC control package for ackermann steering and eventually pathing</description>
  <maintainer email="e-spinner@onu.edu">Elijah Spinner</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>python3</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>igvc</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/pure_pursuit_controller.xml" />
    <controller_interface plugin="${prefix}/ackermann_angle_controller.xml" />
    <hardware_interface plugin="${prefix}/ackermann_arduino_hardware.xml" />
  </export>
</package>
