<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sir_localization</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="e-spinner@onu.edu">Elijah Spinner</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sir_msgs</exec_depend>
  <exec_depend>sir_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
